test_suite/tests/compile_error_cases/duplicate_attr_9.rs
#[moq::automock]
trait Trait {
    #[moq(default, default)]
    fn f(&self) {}
}

fn main() {}
